--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holiday-js-lyricall",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "blather": "^1.0.4",
-    "lyrics-fetcher": "^1.0.1",
-    "markovchain": "^1.0.0",
-    "musicmatch": "^0.2.5"
+    "lyrics-fetcher": "^1.0.1"
   }
 }
