--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holiday-js-lyricall",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "blather": "^1.0.4",
-    "lyrics-fetcher": "^1.0.1"
+    "lyrics-fetcher": "^1.0.1",
+    "stanford-simple-nlp": "^0.2.2"
   }
 }
