--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holiday-js-lyricall",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "virgilvox <moheeb.zara@citrix.com> (http://app.octoblu.com/)",
   "license": "ISC",
   "dependencies": {
+    "alchemy-api": "^1.3.1",
     "blather": "^1.0.4",
     "lyrics-fetcher": "^1.0.1",
     "stanford-simple-nlp": "^0.2.2"
