--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holiday-js-lyricall",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,6 @@
   "dependencies": {
     "alchemy-api": "^1.3.1",
     "blather": "^1.0.4",
-    "lyrics-fetcher": "^1.0.1",
-    "stanford-simple-nlp": "^0.2.2"
+    "lyrics-fetcher": "^1.0.1"
   }
 }
